Review Request 3150:  PLS-731 Reenable code coverage test. Adjusted pom file to generate jacoco.exec file.